...
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp">

                <EditText
                    android:id="@+id/recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
...
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        app:backgroundTint="#D9D9D9"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/recipe_delete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/button"
                        android:paddingVertical="0dp"
                        android:text="@string/delete_button"
                        android:textColor="#3E2723"
                        android:textSize="11sp"
                        app:backgroundTint="#FF6565"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                    <Button
                        android:id="@+id/recipe_back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="Confirm"
                        android:textSize="11sp" />

                </LinearLayout>
            </LinearLayout>

            <TableLayout
...
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/recipe_prep_time"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.67"
                            android:hint="prep"
                            android:inputType="number"
                            android:textAlignment="center"
...

                            android:layout_height="match_parent"
                            android:layout_weight="0.33"/>
                    </LinearLayout>

                    <EditText
                        android:id="@+id/recipe_no_of_servings"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:hint="Servings"
                        android:textAlignment="center"
                        android:textColor="@color/black"
...
                    android:text="@string/ingredients_label"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="26sp"/>

                <Button
                    android:id="@+id/recipe_add_ingredient_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:text="@string/add_label"
                    android:textColor="#000000"
                    android:textSize="11sp"
...
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"/>
            <EditText
                android:id="@+id/recipe_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"/>

            <View
...
