<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/unitSpinner"
        android:layout_width="101dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Unit"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="182dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="number"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="182dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>